--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,5 +8,7 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
-
 }
+<style>
+   
+</style>
